--- a/app/globals.css
+++ b/app/globals.css
@@ -1,77 +1,19 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --mainColor: #141e5b;
+  --accentColor: #2b85fe;
+  --black: #1c1b24;
+  --lightGrey: #8d8d92;
+  --lightBlue: #5a5881;
+  --brightOrange: #ff6443;
+  --lightOrange: #ff644314;
+  --white: #fff;
+  --fontSmall: 1.3rem;
+  --fontMed: 1.75rem;
+  --fontBig: 3.25rem;
+  --fontSuperBig: 4.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+/* ==== General ==== */
 
 * {
   box-sizing: border-box;
@@ -82,17 +24,107 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  color: var(--black);
+  line-height: 34px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+.errors {
+  border: solid red 1px;
+}
+.error_message {
+  color: red;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+/* ==== Button Start==== */
+button {
+  border: none;
+}
+.main-btn {
+  background: var(--mainColor);
+  border-radius: 4px;
+  padding: 0.3em 1em;
+  color: var(--white);
+  font-size: var(--fontMed);
+  font-weight: 600;
+}
+.grey-btn {
+  color: var(--mainColor);
+  background: #141e5b0f;
+  border-radius: 4px;
+  padding: 0.3em 1em;
+  font-size: var(--fontSmall);
+  font-weight: 600;
+}
+.orange-btn {
+  color: var(--brightOrange);
+  background: var(--lightOrange);
+  border-radius: 4px;
+  padding: 0.3em 1em;
+  font-size: var(--fontSmall);
+  font-weight: 600;
+}
+
+.btnScaleUp {
+  animation: whileTap 0.2s ease-in-out;
+}
+
+@keyframes whileTap {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* ==== Button End==== */
+
+/* ==== Typography Start==== */
+
+h2 {
+  font-size: var(--fontSuperBig);
+  font-weight: 900;
+}
+h3 {
+  font-size: var(--fontBig);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 900px) {
+  h3 {
+    font-size: var(--fontMed);
+    font-weight: 500;
+  }
+}
+h4 {
+  font-size: var(--fontMed);
+  font-weight: 500;
+}
+p {
+  font-size: var(--fontSmall);
+  font-weight: 400;
 }
 
 a {
@@ -100,8 +132,4 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+/* ==== Typography End==== */
