--- a/Components/Navbar/NavBar.module.scss
+++ b/Components/Navbar/NavBar.module.scss
@@ -98,7 +98,7 @@
         .dropdownLists {
           position: absolute;
           top: 50px;
-          background-color: var(--secColor);
+          background-color: var(--mainColor);
           display: none;
           transition: all 0.5s ease-in-out;
           width: 100%;
@@ -131,10 +131,11 @@
           transition: all 0.5s ease-in-out;
 
           .dropdownLists {
-            background-color: var(--secColor);
+            background-color: var(--mainColor);
+            color: var(--white);
             display: flex;
             position: absolute;
-            top: 84px;
+            top: 54px;
             font-size: 16px;
             flex-direction: column;
             border-radius: 20px;
