Update services pages

--- a/Components/Booking/Booking.module.scss
+++ b/Components/Booking/Booking.module.scss
@@ -1,6 +1,6 @@
 .question {
   background: var(--mainColor)
-    url('../../public/assets/destinytravelcitizenship.jpeg') top center
+    url('../../public/assets/destinytravelcitizenship.webp') top center
     no-repeat;
   background-size: cover;
   background-blend-mode: soft-light;
