--- a/app/permanentvisas/permanentvisa.module.scss
+++ b/app/permanentvisas/permanentvisa.module.scss
@@ -3,7 +3,7 @@
     padding: 7em 1em;
     height: 90vh;
     background: var(--mainColor)
-      url('../../public/assets/destinytravelworkvisas.jpeg') top center
+      url('../../public/assets/destinytravelpermanent.webp') top center
       no-repeat;
     background-size: cover;
     background-blend-mode: overlay;
