--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@ body {
   max-width: 100vw;
   margin: 0;
   padding: 0;
+  font-family: 'Outfit', sans-serif;
   font-size: 16px;
   color: var(--black);
   line-height: 25px;
@@ -44,6 +45,14 @@ img {
 
 img:hover {
   transform: scale(1.1);
+}
+
+.card {
+  border: solid 1px var(--accentColor) !important;
+}
+
+.card:hover {
+  box-shadow: 3px 9px 25px #1c1b2474;
 }
 
 .errors {
@@ -76,17 +85,10 @@ button {
   font-size: var(--fontMed);
   font-weight: 600;
 }
-.grey-btn {
-  color: var(--mainColor);
-  background: #141e5b0f;
-  border-radius: 4px;
-  padding: 0.3em 1em;
-  font-size: var(--fontSmall);
-  font-weight: 600;
-}
-.orange-btn {
-  color: var(--brightOrange);
-  background: var(--lightOrange);
+
+.sec-btn {
+  color: var(--white);
+  background: var(--mainColor);
   border-radius: 4px;
   padding: 0.3em 1em;
   font-size: var(--fontSmall);
@@ -120,18 +122,64 @@ button {
   color: var(--mainColor);
 }
 
-.slick-prev {
+.HomeHero .slick-prev {
   left: 3%;
   z-index: 1000;
   border-radius: 50%;
   background: var(--white);
 }
-.slick-next {
+.HomeHero .slick-next {
   right: 5%;
   z-index: 1000;
   border-radius: 50%;
   background: var(--white);
 }
+
+.placesSlider .slick-prev,
+.placesSlider.slick-next,
+.reviewsSlider .slick-prev,
+.reviewsSlider .slick-next {
+  display: none !important;
+}
+
+/*
+.reviewsSlider .slick-prev {
+  left: 70%;
+  top: 110%;
+  background: var(--secColor);
+  border-radius: 50%;
+}
+.reviewsSlider .slick-next {
+  right: 5%;
+  top: 110%;
+  background: var(--secColor);
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 900px) {
+  .slick-prev {
+    left: 85% !important;
+    top: 110% !important;
+  }
+} */
+
+/* .placesSlider .slick-slide { */
+/* Remove white space between slides */
+/* margin: 0; */
+/* display: flex;
+  flex-direction: row;
+  flex: 1 1 40%; */
+
+/* Ensure the slide takes up the full width of the container */
+/* } */
+
+/* Image within Slide */
+/* .placesSlider .slick-slide img { */
+/* Ensure the image takes up the full width of the slide */
+/* width: 100%; */
+
+/* Set height to auto to maintain aspect ratio */
+/* } */
 
 /* ==== Button End==== */
 
@@ -144,7 +192,12 @@ h2 {
 
 h3 {
   font-size: var(--fontBig);
-  font-weight: 500;
+  font-weight: 700;
+}
+
+.section-title {
+  color: var(--mainColor);
+  font-weight: 700;
 }
 
 @media screen and (max-width: 800px) {
