--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -31,15 +31,12 @@
     color: var(--lightGrey);
     background: var(--white);
 
-    h4 {
-      color: var(--mainColor);
-    }
-
     .serviceCard {
       border: solid 1px var(--mainColor);
       border-radius: 12px;
       overflow: hidden;
       width: 100%;
+
       .cardTitle {
         color: var(--white);
 
@@ -70,5 +67,21 @@
         }
       }
     }
+  }
+
+  .hotOffers {
+    background: var(--mainColor) url('/assets/destinytravelbusinessvisas.webp')
+      center center no-repeat;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-attachment: fixed;
+    padding: 5em 0;
+    h3 {
+      color: var(--white);
+    }
+  }
+
+  .reviewsContainer {
+    padding: 6em 1em;
   }
 }
