--- a/app/hotelreservation/hotelreservation.module.scss
+++ b/app/hotelreservation/hotelreservation.module.scss
@@ -16,6 +16,10 @@
     text-align: center;
     color: var(--white);
 
+    h2 {
+      font-size: 2.5rem !important;
+    }
+
     @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
       background-attachment: scroll;
     }
